# nrel_dev_api

./: .cookiecutter.json  .flake8  .gitignore  00_core.ipynb  00_solar.ipynb  01_solar.ipynb  01_solar.resource_data.ipynb  02_solar.dataset_query.ipynb  03_solar.pvwatts_v6.ipynb  04_solar.nsrdb.ipynb  CHANGELOG.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.rst  Makefile  README.md  README.rst  index.ipynb  noxfile.py  pyproject.toml  settings.ini
.github/workflows/: constraints.txt  main.yml  tests.yml
.ipynb_checkpoints/: 00_core-checkpoint.ipynb  index-checkpoint.ipynb  settings-checkpoint.ini
docs/: _config.yml  conf.py  core.html  index.html  index.rst  reference.rst  requirements.txt  sidebar.json  solar.dataset_query.html  solar.html  solar.nsrdb.html  solar.pvwatts_v6.html  solar.resource_data.html  tutorial.rst  usage.rst
docs/Tutorial/: 00_core.ipynb  02_solar.dataset_query.ipynb  03_solar.pvwatts_v6.ipynb  04_solar.nsrdb.ipynb
docs/Tutorial/solar/: nsrdb.ipynb  pvwatts_v6.ipynb  solar_dataset_query.ipynb  solar_resource_data.ipynb
docs/_data/: topnav.yml
docs/_data/sidebars/: home_sidebar.yml
docs/api/: api_key.rst  solar.rst
nrel_dev_api/: __init__.py  _core.py  _nbdev.py  solar.py
nrel_dev_api/solar/: __init__.py  dataset_query.py  nsrdb.py  pvwatts_v6.py  resource_data.py
src/nrel_dev_api/: __init__ .py  __init__.py  _core.py
src/nrel_dev_api/solar/: __init__.py  dataset_query.py  nsrdb.py  pvwatts_v6.py  resource_data.py
src/nrel_dev_api/solar/.ipynb_checkpoints/: __init__-checkpoint.py  nsrdb-checkpoint.py
tests/: __init__.py  test_version.py
tutorial/: 01_solar.resource_data.ipynb  04_solar.nsrdb.ipynb
