[tool.poetry]
name = "nrel_dev_api"
version = "0.1.1"
description = "Access data and analysis services that NREL (National Renewable Energy Lab) provides using a Python API."
authors = ["Sarthak Jariwala <jariwala@uw.edu>"]
license = "Apache-2.0"
readme = "README.rst"
homepage = "https://github.com/SarthakJariwala/nrel_dev_api"
repository = "https://github.com/SarthakJariwala/nrel_dev_api"
documentation = "https://nrel_dev_api.readthedocs.io"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.urls]
Changelog = "https://github.com/SarthakJariwala/nrel_dev_api/releases"

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.26.0"
pandas = "^1.3.0"
types-requests = "^2.25.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.910"
typeguard = "^2.12.1"
xdoctest = {extras = ["colors"], version = "^0.15.5"}
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.19.0"
flake8 = "^3.9.2"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.12.0"
darglint = "^1.8.0"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^0.5.2"
Pygments = "^2.9.0"
nox = "^2021.6.12"
nox-poetry = "^0.8.6"
Sphinx = "^3"
sphinx-book-theme = "^0.1.1"
nbsphinx = "^0.8.6"
ipykernel = "^6.0.3"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["nrel_dev_api"]

[tool.coverage.report]
show_missing = true
# fail_under = 100

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
